Added partial solution